<resources>
    <string name="app_name">High Mountain</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_sign_in">Sign In</string>
    <string name="str_forget_password"><u>Forget your password?</u></string>
    <string name="str_sign_up">Don\'t Have An Account.\n<u>Register Here</u></string>
    <string name="str_user_profile">User Profile Pic</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password </string>
    <string name="str_be_a_traveller">#BEATRAVELLER</string>
    <string name="str_already_member_is_it_you">Already Member\nis it you?</string>

    <string name="hint0">Username</string>
    <string name="hint1">Email </string>
    <string name="hint2">Password</string>
    <string name="hint3">Mobile number</string>
    <string name="hint4">Date of Birth(dd/mm/yy)</string>
    <string name="hint5">Referral code(Optional)</string>

    <string name="btn1">Male</string>
    <string name="btn2">Female</string>
    <string name="btn3">Other</string>

    <string name="str_already_have_an_account">Already have an Account?</string>
    <string name="str_sign_in_here">Sign In Here</string>
    <string name="str_generate_otp_for_sign_up">Generate OTP for sign up</string>
    <string name="str_other">Other</string>
    <string name="str_female">Female</string>
    <string name="str_male">Male</string>
    <string name="str_dont_get_the_otp_00_00">Dont get the OTP? 00.00</string>
    <string name="str_resend">Resend</string>
    <string name="str_submit">Submit</string>
    <string name="str_we_have_sent_an_otp_on_your_mobile_number_91_9702654789">We have sent an OTP on your \nmobile number +91–9702654789</string>
    <string name="str_we_have_sent_an_otp_on_your_mobile_number">We have sent an OTP on your \nmobile number</string>
    <string name="str_verifying_your_number">Verifying your number!</string>
    <string name="str_search">Search</string>
    <string name="str_profile">Profile</string>
    <string name="str_view_your_profile">View your profile</string>
    <string name="str_my_trips">My Trips</string>
    <string name="str_my_wallet">My Wallet</string>
    <string name="str_my_rewards">My Rewards</string>
    <string name="str_my_bucketlist">My Bucketlist</string>
    <string name="str_settings">Settings</string>
    <string name="str_logout">Logout</string>
    <string name="following_n999">Following\n999</string>
    <string name="followers_n999">Followers\n999</string>
    <string name="str_follow">Follow</string>
    <string name="str_lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="str_image">image</string>
    <string name="str_share">share</string>
    <string name="str_traveller_blogger_guide_entrepreneur">Traveller | Blogger | Guide | Entrepreneur</string>
    <string name="str_referral_code_565842">Referral Code : 565842</string>
    <string name="str_ria_singh">Ria Singh</string>
    <string name="str_find_your_favourite_destination">Find Your Favourite Destination</string>
    <string name="str_featured_destinations">Featured Destinations</string>
    <string name="str_point_to_be_kept_in_mind">Point to be kept in mind</string>
    <string name="str_transport_pefered">Transport Pefered</string>
    <string name="str_points_to_be_kept_in_mind">Points to be kept in mind</string>
    <string name="str_budget">Budget</string>
    <string name="str_total_number_of_rooms">Total Number of Rooms</string>
    <string name="str_number_of_travellers">Number of Travellers</string>
    <string name="str_my_dates_sre_flexible">My dates sre flexible</string>
    <string name="str_end_date">End Date</string>
    <string name="str_start_date">Start Date</string>
    <string name="str_where_to">Where To?</string>
    <string name="str_from">From</string>
    <!--08/03/2018-->
    <string name="str_be_a_traveller1">#BE A TRAVELLER</string>
    <string name="str_travel_book">Travel Book</string>
    <string name="str_shop_with_us">Shop with us</string>
    <string name="str_be_entrepreneur">Be Entrepreneur</string>
    <string name="str_let_s_socialize">Let\'s Socialize</string>
    <string name="str_our_services">Our Services</string>
    <string name="str_hello_android">Hello Android</string>
    <string name="str_travel_with_us">Travel with us</string>
    <string name="str_destinations">Destinations</string>
    <string name="str_plan_trip">Plan Trip</string>
    <string name="str_activities">Activities</string>
    <string name="str_theme">Theme</string>
    <string name="str_rentouts">Rentouts</string>
    <string name="str_find_guide">Find Guide</string>
    <string name="str_travel_bible">Travel Bible</string>
    <string name="str_near_by">Near By</string>
    <string name="str_all_products">All Products</string>
    <string name="str_gift_cards">Gift Cards</string>
    <string name="str_refer_a_friend">Refer A Friend</string>
    <string name="str_be_a_guide">Be A Guide</string>
    <string name="str_start_a_blogging">Start A Blogging</string>
    <string name="str_give_rentouts">Give Rentouts</string>
    <string name="str_let_s_barter">Let\'s Barter</string>
    <string name="str_let_s_find_neighbour">Let\'s Find Neighbour</string>
    <string name="str_let_s_discuss">Let\'s Discuss</string>
    <string name="str_let_s_travel">Let\'s Travel</string>
    <string name="str_get_help">Get Help</string>
    <string name="str_dubai">Dubai</string>
    <string name="str_today_s_deal">Today\'s deal</string>
    <string name="str_2500">$2500</string>
    <string name="str_select_number_of_travellers">Select number of travellers</string>
    <string name="str_adults">Adults</string>
    <string name="str_infants_s">Infants(s)</string>
    <string name="str_child_s">Child(s)</string>
    <string name="str_pets_s">Pets(s)</string>
    <string name="str_details_of_travellers">Details of Travellers</string>
    <string name="str_1">1</string>
    <string name="str_name_of_adult">Name of Adult</string>
    <string name="str_age">Age</string>
    <string name="str_sex">Sex</string>
    <string name="str_meal">Meal</string>
    <string name="str_name_of_infant">Name of Infant</string>
    <string name="str_name_of_child">Name of Child</string>
    <string name="str_give_the_description_about_pet">Give the description about pet</string>
    <string name="str_ok">OK</string>
    <string name="str__1_single_sharing">1*Single Sharing</string>
    <string name="str_2_double_sharing">2*Double Sharing</string>
    <string name="str_3_tripple_sharing">3*Tripple Sharing</string>
    <string name="str_distance_calculator">Distance Calculator</string>
    <string name="str_trekking_routes">Trekking Routes</string>
    <string name="str_currency_converter">Currency Converter</string>
    <string name="str_language_translator">Language Translator</string>
    <string name="str_travel_budget">Travel Budget</string>
    <string name="str_offline_map">Offline Map</string>
    <string name="str_account">Account</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_faq_s">FAQ\'s</string>
    <string name="str_more">More</string>

</resources>
